feat: complete module auth
