# routes/api.php
@@ -11,3 +11,9 @@ use App\Http\Controllers\AuthController;
 
 Route::post('/auth/register', [AuthController::class, 'register']);
 Route::post('/auth/login', [AuthController::class, 'login']);
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/auth/me', [AuthController::class, 'getMe']);
+    Route::get('/auth/logout', [AuthController::class, 'logout']);
+    Route::put('/auth/update', [AuthController::class, 'update']);
+});
